# DocAgent

./: FOLLOWUP.md  README.md  main.py  pyproject.toml
config/: config.yaml
data/output/: result_20260619_112614.md
doc/: RAG_Agent.pptx
src/agent/: rag_agent.py
src/config/: config.py
src/indexer/: knowedge_base.py
src/parser/: qianwen_pdf_parser.py
src/utils/: logger.py
