[project]
name = "docagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "openai>=2.41.1",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "chromadb>=1.5.9",
    "timm>=1.0.27",
    "easyocr>=1.7.2",
    "pandas>=2.3.3",
    "pymupdf>=1.27.2.3",
    "modelscope>=1.37.1",
]

